Modernize Glazed Lists Java usage